--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </nav>
 
     <main class="container">
+        <div class="categories-container">
+            <label for="categories">Categorie: </label>
+            <select id="categories">
+                <option></option>
+            </select>
+        </div>
         <div class="card-container"></div>
     </main>
 
